--- a/build.gradle
+++ b/build.gradle
@@ -6,35 +6,18 @@ repositories {
     mavenCentral()
     maven { url "https://raw.githubusercontent.com/jacamo-lang/mvn-repo/master" }
     maven { url "https://jade.tilab.com/maven/" }
+}
 
-    flatDir { dirs 'lib' }
+configurations {
+    scheduleRuntime
 }
 
 dependencies {
-    implementation 'io.github.jason-lang:jason-interpreter:3.2.0'
-
-    // to use locally installed jars:
-    implementation fileTree(dir: 'lib', include: '*.jar')
-	implementation files('lib/eismassim-4.1-jar-with-dependencies.jar')
+    scheduleRuntime files("server/server-2019-2.1-jar-with-dependencies.jar")
 }
 
-sourceSets {
-    main {
-        java {
-            srcDir '.'
-        }
-    }
-}
-
-task run (type: JavaExec, dependsOn: 'classes') {
-    description 'runs the application'
-    mainClass = 'jason.infra.local.RunLocalMAS'
-    args = ['mapc2019.mas2j']
-    classpath sourceSets.main.runtimeClasspath
-}
-
-clean {
-    delete 'bin'
-    delete 'build'
-}
-
+task run (type: JavaExec) {
+    main = "massim.Server"
+	args = ["-conf", "server/conf/SampleConfigOneTeam.json", "--monitor"]
+    classpath = configurations.scheduleRuntime
+  }
